--- a/apps/web/public/testEmbed.html
+++ b/apps/web/public/testEmbed.html
@@ -45,7 +45,7 @@
                         showTitle: true,
                         title: 'Default Bot Here',
                         titleAvatarSrc: 'https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg',
-                        showAgentMessages: true,
+                        showAgentMessages: false,
                         welcomeMessage: 'Hello! Welcome to the chatbot! This is a custom welcome message',
                         errorMessage: 'This is a custom error message',
                         backgroundColor: '#000000',
@@ -94,9 +94,9 @@
                         },
                         footer: {
                             textColor: '#ffffff',
-                            text: 'Powered by Flowise',
-                            company: 'Flowise',
-                            companyLink: 'https://flowiseai.com'
+                            text: 'Powered by',
+                            company: 'The AnswerAI',
+                            companyLink: 'https://theanswer.ai'
                         }
                     }
                 }
